syntax = "proto3";

option go_package ="./pb";

package pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------developer--------------------------------
message Developer {
  int64 dataId = 1; //Generated primary key, MUST NOT be changed.
  int64 dataCreateAt = 2; //dataCreateAt
  int64 dataUpdateAt = 3; //dataUpdateAt
  int64 id = 4; //Unique id of GitHub user.
  string name = 5; //name
  string username = 6; //username
  string avatarUrl = 7; //avatarUrl
  string company = 8; //company
  string location = 9; //location
  string bio = 10; //bio
  string blog = 11; //blog
  string email = 12; //email
  int64 createAt = 13; //createAt
  int64 updateAt = 14; //updateAt
}

message AddDeveloperReq {
  int64 id = 1; //Unique id of GitHub user.
  string name = 2; //name
  string username = 3; //username
  string avatarUrl = 4; //avatarUrl
  string company = 5; //company
  string location = 6; //location
  string bio = 7; //bio
  string blog = 8; //blog
  string email = 9; //email
  int64 createAt = 10; //createAt
  int64 updateAt = 11; //updateAt
}

message AddDeveloperResp {
}

message UpdateDeveloperReq {
  int64 id = 1; //Unique id of GitHub user.
  string name = 2; //name
  string username = 3; //username
  string avatarUrl = 4; //avatarUrl
  string company = 5; //company
  string location = 6; //location
  string bio = 7; //bio
  string blog = 8; //blog
  string email = 9; //email
  int64 createAt = 10; //createAt
  int64 updateAt = 11; //updateAt
}

message UpdateDeveloperResp {
}

message DelDeveloperByIdReq {
  int64 id = 1; //id
}

message DelDeveloperByIdResp {
}

message DelDeveloperByUsernameReq {
  string username = 1; //username
}

message DelDeveloperByUsernameResp {
}

message GetDeveloperByIdReq {
  int64 id = 1; //id
}

message GetDeveloperByIdResp {
  Developer developer = 1; //developer
}

message GetDeveloperByUsernameReq {
  string username = 1; //username
}

message GetDeveloperByUsernameResp {
  Developer developer = 1; //developer
}

// ------------------------------------ 
// Rpc Func
// ------------------------------------ 

service developer{
	 //-----------------------developer----------------------- 
	 rpc AddDeveloper(AddDeveloperReq) returns (AddDeveloperResp); 
	 rpc UpdateDeveloper(UpdateDeveloperReq) returns (UpdateDeveloperResp); 
	 rpc DelDeveloperById(DelDeveloperByIdReq) returns (DelDeveloperByIdResp);
   rpc DelDeveloperByUsername(DelDeveloperByUsernameReq) returns (DelDeveloperByUsernameResp);
	 rpc GetDeveloperById(GetDeveloperByIdReq) returns (GetDeveloperByIdResp);
   rpc GetDeveloperByUsername(GetDeveloperByUsernameReq) returns (GetDeveloperByUsernameResp);
}
